working! Make sure to enable camera permissions on your phone

--- a/src/pages/page1/page1.html
+++ b/src/pages/page1/page1.html
@@ -20,7 +20,7 @@
 
 
 <button (click)="videoconnect()">VideoChat</button>
-<video #myvideo></video>
+<video #myvideo></video>  <!-- @ViewChild('myvideo') myVideo: any; -->
 
   <button ion-button secondary menuToggle>Toggle Menu</button>
 </ion-content>
