--- a/src/pages/page1/page1.html
+++ b/src/pages/page1/page1.html
@@ -3,24 +3,38 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Baby Monitor</ion-title>
+    <ion-title>Perch</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h3>Ionic Menu Starter</h3>
+  <h3>Enter the ID of the monitor you would like to connect to below.</h3>
 
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
+  <!-- <p>
+  </p> -->
 
 <h1>My id - {{mypeerid}}</h1>
+
 <input type="text" [(ngModel)]="anotherid">
-<button (click)="connect()">Connect</button>
 
 
-<button (click)="videoconnect()">VideoChat</button>
-<video #myvideo></video>  <!-- @ViewChild('myvideo') myVideo: any; -->
+<!-- OLD BUTTON FOR SENDING JUST DATA -->
+<!-- <button (click)="connect()">Connect</button> -->
+<br>
+<br>
 
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+<!-- ACTUAL VIDEO STREAM BOX-->
+<video #myvideo height="300" width="300" controls></video>  <!-- @ViewChild('myvideo') myVideo: any; -->
+
+<br>
+
+<!-- CONNECT TO PEER VIA VIDEO BUTTON -->
+<button ion-button secondary (click)="videoconnect()">Video Chat</button>
+
+<!-- PAUSE STREAM -->
+<button ion-button secondary (click)="videopause()">Pause</button>
+
+<!-- STOP STREAM -->
+<button ion-button secondary (click)="videostop()">End Session</button>
+
 </ion-content>
