--- a/src/pages/page2/page2.html
+++ b/src/pages/page2/page2.html
@@ -3,7 +3,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Page Brazillion</ion-title>
+    <ion-title>Video Record</ion-title>
   </ion-navbar>
 </ion-header>
 
