--- a/src/pages/page1/page1.html
+++ b/src/pages/page1/page1.html
@@ -11,12 +11,12 @@
 <ion-content padding class="content">
 
   <div class="top">
-    <img class="owlIcon" src="img/owl-logo-02.svg" alt="">
+    <img class="owlIcon" src="img/owl-logo-02-01-01.svg" alt="">
   </div>
 
   <br>
 
-  <p class="myid" color="dark">My id - {{mypeerid}}</p>
+  <p class="myid" color="dark">My ID - {{mypeerid}}</p>
 
   <!-- ACTUAL VIDEO STREAM BOX-->
   <div class="videoDiv">
@@ -34,7 +34,7 @@
   </div>
   <br>
 <ion-item>
-  <ion-label color="primary" stacked clearInput>Enter the ID you would like to connect to.</ion-label>
+  <ion-label color="primary" stacked clearInput>Enter the ID you would like to connect to:</ion-label>
   <ion-input type="text" [(ngModel)]="anotherid" value="{{anotherid}}"></ion-input>
 </ion-item>
 <br>
